# JL02

./: .gitignore  README.md
.claude/: settings.local.json
.cursor/plans/: 音声入力+siri風ui_c7794fc1.plan.md
.github/workflows/: ios-build.yml
GinzaDB/: ginzaDB.json
Katanori_M5stack/speakword/: AquesTalkTTS.h  AquesTalkTTS_M5.cpp  speakword.ino
ai_services/ai-backend/: .dockerignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt
ai_services/ai-backend/docs/: manual.md
ai_services/ai-backend/src/: location_db_lookup.py  main.py
ai_services/rag_maker/: README.md  step1_upload_documents.py  step2_query_rag.py
ai_services/vlm_server/: README.md  requirements.txt  serve_vlm.py
arglass/: .gitignore  README.md  project.yml
arglass/ArGlass/: ArGlassApp.swift  ContentView.swift
arglass/ArGlass.xcodeproj/: project.pbxproj
arglass/ArGlass/Models/: CaptureOrientation.swift  HistoryEntry.swift  Interest.swift  Landmark.swift  LocationInfo.swift  UserPreferences.swift
arglass/ArGlass/Resources/: Info.plist
arglass/ArGlass/Services/: BatteryMonitor.swift  CameraPreviewView.swift  CameraService.swift  HistoryService.swift  LocationService.swift  ServiceProtocols.swift  SpeechTranscriber.swift  UserPreferencesManager.swift  VLMAPIClient.swift
arglass/ArGlass/ViewModel/: HUDViewModel.swift  HistoryViewModel.swift  OnboardingViewModel.swift
makeDB/: GEMINI.md  README.md  config.yaml  ginza_tourist_spots.json  main.py  pyproject.toml  sendai_tourist_spots.json  test_run.py  tourist_spot_generator.py
(+52 files in other folders)
